# synthetic-data-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/synthetic_data_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_synthetic_data_check.py
